Fixed schedule button size on mobile

--- a/src/style/Schedule.scss
+++ b/src/style/Schedule.scss
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     margin-top: 1em;
-    // padding: 0 8em;
+    padding: 0 8em;
     @media (max-width: 900px) {
         padding: 0 1em;
     }
@@ -10,6 +10,12 @@
     .buttons_container {
         display: flex;
         justify-content: space-between;
+
+        @media (max-width: 900px) {
+            flex-direction: column;
+            align-items: center;
+            gap: 0.5em; 
+        }
         
         .tabs {
             display: flex;
@@ -63,6 +69,7 @@
             flex-wrap: wrap;  
             
             @media (max-width: 900px) {
+                order: -1;
                 font-size: 1em;
                 justify-content: center; 
             }
